# girepo

./: .gitignore  LICENSE  README.md  check_packaging_behavior.sh  entry_points.cfg  packaging.sh  requirements.txt  setup.cfg
.circleci/: config.yml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: input.txt
girepo/: __init__.py  arg_parser.py  extractor.py  fetch.py  formatter.py  grprint.py  sort.py
misc/: update_readme.py
test/: test_create_argparser.py  test_extractor.py  test_formatter.py
