;  https://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files
[metadata]
name = girepo
version = attr: girepo.__version__
author = ta08
author_email = marl4dev@gmail.com
description = A tool for printing github repository information as a markdown table format.
long_description = file: README.md
long_description_content_type=text/markdown
url = https://github.com/ta08/girepo
license = "Apache License 2.0"
classifier =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: Apache Software License
    Topic :: Documentation
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
python_requires= >=3.7
zip_safe = False
packages = find:
entry_points = file: entry_points.cfg
install_requires =
  requests

